# mycobot_320pi_R6A

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_SUMMARY.md  INDEX.md  README.md  SESSION_RESUME.md  bridge_pi_debug.py
.claude/: settings.json
datasets/: README.md
docs/: ARCHITECTURE.md  BRIDGE_PI_UPGRADE_GUIDE.md  CAMERA_CALIBRATION.md  DEBUG_CONNECTION_GUIDE.md  DEPLOYMENT.md  DIAGNOSTIC_ROBOT.txt  QUICKSTART.md  REAL_ROBOT_TEST_PROCEDURE.md  SESSION_TEST.md  (+11 more)
mycobot_gateway/: README.md  package.xml  setup.py
mycobot_gateway/Old_launch_exect/launch/: detect_marker.launch.py  detect_marker_sim-v1.launch.py  detect_marker_sim.launch.py  detect_marker_with_topic.launch.py  follower_test.launch.py
mycobot_gateway/Old_launch_exect/mycobot_320pi/: detect_marker.py  following_marker-v2.py  following_marker-v3.py  following_marker.py  following_marker_standalone.py  opencv_camera.py  relative_follower.py  slider_control.py  teleop_keyboard_test.py
mycobot_gateway/launch/: bridge_only.launch.py  commander.launch.py  marker_follow.launch.py  marker_follow_full.launch.py  mycobot_teleop.launch.py  pick_and_place.launch.py  pick_and_place_sorting.launch.py  rviz_sync.launch.py  simple_gui.launch.py  slider_control.launch.py  synthetic_data.launch.py  synthetic_data_v2.launch.py  synthetic_data_v3.launch.py  teleop_keyboard.launch.py
mycobot_gateway/mycobot_gateway/: bridge_tour.py  color_object_detector.py  command_executor_pi.py  dream_inference_node.py  gripper_to_robot_bridge.py  joint_sync.py  marker_follower.py  pick_and_place_node.py  robot_commander.py  simple_gui.py  slider_control.py  sorting_orchestrator.py  synthetic_data_collector.py  synthetic_data_collector_v2.py  teleop_keyboard.py  trajectory_to_robot_bridge.py
mycobot_gateway/mycobot_gateway/vision/: __init__.py  camera_publisher.py  marker_detector.py
mycobot_gateway/scripts/: bridge_pi_simple.py  bridge_pi_standalone.py  bridge_pi_vision.py  bridge_tour  camera_publisher  color_object_detector  dream_inference  gripper_to_robot_bridge  joint_sync  marker_detector  marker_follower  pi_camera_server.py  pick_and_place  robot_commander  simple_gui  slider_control  sorting_orchestrator  synthetic_data_collector  synthetic_data_collector_v2  teleop_keyboard  trajectory_to_robot_bridge
(+96 files in other folders)
